# purescript-webgl-generator

./: .gitignore  README.md  bower.json  gruntfile.js  package.json  purescript-webgl-generator.cabal  purescript-webgl-raw.cabal  purescript-webgl-raw.purs  test.purs  webgl.idl
docs/: README.md  WebGL-1.0.3.idl
docs/Graphics/WebGL/: Raw.md
docs/Graphics/WebGL/Raw/: Enums.md  Types.md  Util.md
generator/: Main.hs
generator/IDL/: AST.hs  Cleaner.hs  Parser.hs  Printer.hs
src/: Main.hs
src/Graphics/WebGL/: Raw.js  Raw.purs
src/Graphics/WebGL/Raw/: Enums.purs  Types.purs  Util.js  Util.purs
src/IDL/: AST.hs  Parser.hs  Printer.hs
