name: purescript-webgl-generator
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-2
license-file: LICENSE
maintainer: jnf@arcor.de
category: Development
author: Jürgen (Jutaro) Nicklisch-Franken
data-dir: ""

executable purescript-webgl-generator
  main-is: Main.hs
  buildable: True
  default-language: Haskell2010
  hs-source-dirs: src
  other-modules: IDL.AST IDL.Parser IDL.Printer

  build-depends:  base         == 4.*,
                  parsec       == 3.1.*,
                  pretty       == 1.1.*,
                  transformers == 0.4.*
