name: purescript-webgl-raw
version: 0.3.0
cabal-version: >= 1.10
build-type: Simple
license: GPL-2
license-file: LICENSE
maintainer: jon@childr.es (originally jnf@arcor.de)
category: Development
author: Jon Childress (branched from Jürgen (Jutaro) Nicklisch-Franken)
synopsis: generates PureScript by parsing the Khronos WebGL specification

executable purescript-webgl-raw
  main-is: Main.hs
  buildable: True
  default-language: Haskell2010
  hs-source-dirs: generator
  other-modules: IDL.AST IDL.Parser IDL.Printer

  build-depends:  base         == 4.*,
                  containers   == 0.5.*,
                  parsec       == 3.1.*,
                  pretty       == 1.1.*,
                  transformers == 0.4.*
